--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
                         <form class="pulse animated">
                             <div class="home-btn" style="margin-top: 20px;">
                                 <div class="row align-items-center">
-                                    <div class="col-xl-8"><input class="border-primary form-control" type="email" placeholder="Enter your email address" autofocus="" style="box-shadow: 0px 0px 0px rgb(155,22,0);border-style: none;"></div>
-                                    <div class="col-xl-4"><button class="btn btn-lg" type="button" style="background: rgb(155,25,4);color: rgb(255,255,255);font-family: Actor, sans-serif;border-style: none;">Join Waitlist&nbsp;</button></div>
+                                    <div class="col-6 col-xl-8"><input class="border-primary form-control" type="email" placeholder="Enter your email address" autofocus="" style="box-shadow: 0px 0px 0px rgb(155,22,0);border-style: none;"></div>
+                                    <div class="col-6 col-xl-4"><button class="btn btn-lg" type="button" style="background: rgb(155,25,4);color: rgb(255,255,255);font-family: Actor, sans-serif;border-style: none;"><strong>Join Waitlist&nbsp;</strong></button></div>
                                 </div>
                             </div>
                         </form>
                     </div>
                 </div>
-                <div class="col-md-6 text-center">
+                <div class="col-md-6 text-center p-5">
                     <div class="home-image">
                         <div class="circle"></div><img src="assets/img/2.png">
                     </div>
