--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <form class="pulse animated" action="https://formsubmit.co/tayo.akigbogun@veraticket.com" method="post">
                             <div class="home-btn" style="margin-top: 20px;">
                                 <div class="row align-items-center">
-                                    <div class="col-6 col-xl-8"><input class="border-primary form-control" type="email" placeholder="Enter your email address" autofocus="" style="box-shadow: 0px 0px 0px rgb(155,22,0);border-style: none;" required=""><input class="form-control" type="hidden" name="_captcha" value="false"><input class="form-control" type="hidden" value="http://127.0.0.1:8000/thankyou.html" name="_next"></div>
+                                    <div class="col-6 col-xl-8"><input class="border-primary form-control" type="email" placeholder="Enter your email address" autofocus="" style="box-shadow: 0px 0px 0px rgb(155,22,0);border-style: none;" required=""><input class="form-control" type="hidden" name="_captcha" value="false"><input class="form-control" type="hidden" value="https://tayoaki.github.io/LandingPage/thankyou" name="_next"></div>
                                     <div class="col-6 col-xl-4"><button class="btn btn-lg" type="submit" style="background: rgb(155,25,4);color: rgb(255,255,255);font-family: Actor, sans-serif;border-style: none;"><strong>Join Waitlist&nbsp;</strong></button></div>
                                 </div>
                             </div>
