--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="row align-items-center">
                 <div class="col-md-6">
                     <div class="home-text">
-                        <h1 class="glow" style="/*color: rgb(35,134,232);*/"><strong>Secure, Hasslefree </strong><br><strong>Ticket Purchasing.</strong><br></h1>
+                        <h1 class="flash animated glow" style="/*color: rgb(35,134,232);*/"><strong>Secure, Hasslefree </strong><br><strong>Ticket Purchasing.</strong><br></h1>
                         <p class="pulse animated" style="margin-left: 10px;font-weight: bold;">Buy, sell, trade tickets securely with no worry of fraud<br></p>
                         <form class="pulse animated" action="https://formsubmit.co/tayo.akigbogun@veraticket.com" method="post">
                             <div class="home-btn" style="margin-top: 20px;">
@@ -44,7 +44,8 @@
                 </div>
                 <div class="col-md-6 text-center p-5">
                     <div class="home-image">
-                        <div class="circle"></div><img src="assets/img/2.png">
+                        <div class="circle"></div>
+                        <div class="circle2"></div><img src="assets/img/2.png">
                     </div>
                 </div>
             </div>
