--- a/thankyou.html
+++ b/thankyou.html
@@ -3,8 +3,16 @@
 
 <head>
     <meta charset="utf-8">
+<!— Global site tag (gtag.js) - Google Analytics —>
+<script async src=“https://www.googletagmanager.com/gtag/js?id=G-81MLZDQ5NX”></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag(‘js’, new Date());
+  gtag(‘config’, ‘G-81MLZDQ5NX’);
+</script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>VTs</title>
+    <title>VeraTickets</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Actor&amp;display=swap">
     <link rel="stylesheet" href="assets/css/Footer-Basic.css">
