testing info email

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <div class="home-text">
                         <h1 class="flash animated glow" style="/*color: rgb(35,134,232);*/"><strong>Secure, Hasslefree </strong><br><strong>Ticket Purchasing.</strong><br></h1>
                         <p class="pulse animated" style="margin-left: 10px;font-weight: bold;">Buy, sell, trade tickets securely with no worry of fraud<br></p>
-                        <form class="pulse animated" action="https://formsubmit.co/tayo.akigbogun@veraticket.com" method="post">
+                        <form class="pulse animated" action="https://formsubmit.co/info.akigbogun@veraticket.com" method="post">
                             <div class="home-btn" style="margin-top: 20px;">
                                 <div class="row align-items-center">
                                     <div class="col-6 col-xl-8"><input class="border-primary form-control" type="email" placeholder="Enter your email address" name="email" style="box-shadow: 0px 0px 0px rgb(155,22,0);border-style: none;" required="" autofocus=""><input class="form-control" type="hidden" name="_captcha" value="false"><input class="form-control" type="hidden" value="https://tayoaki.github.io/LandingPage/thankyou" name="_next"></div>
